FusionDev Backup1/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>BizDev</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Converted - Other</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Business Dev</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Converted - Other</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CEG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Converted - Other</fullName>
        </values>
        <values>
            <fullName>RSM Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dealer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Open</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Converted - Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Converted - Other</fullName>
        </values>
        <values>
            <fullName>RSM Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basecamp</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Landmark</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_VP_of_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by VP of Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Population__c</fullName>
        <label>Area Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5,000</fullName>
                </value>
                <value>
                    <fullName>5,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 75,000</fullName>
                </value>
                <value>
                    <fullName>75,001 - 200,000</fullName>
                </value>
                <value>
                    <fullName>200,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>DIB</fullName>
                </value>
                <value>
                    <fullName>Ferguson</fullName>
                </value>
                <value>
                    <fullName>Mid States</fullName>
                </value>
                <value>
                    <fullName>NBS</fullName>
                </value>
                <value>
                    <fullName>Sports Inc</fullName>
                </value>
                <value>
                    <fullName>TrueValue</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brute</fullName>
                </value>
                <value>
                    <fullName>Canyon</fullName>
                </value>
                <value>
                    <fullName>Engel</fullName>
                </value>
                <value>
                    <fullName>Grizzly</fullName>
                </value>
                <value>
                    <fullName>Ice Hole</fullName>
                </value>
                <value>
                    <fullName>Igloo</fullName>
                </value>
                <value>
                    <fullName>K2</fullName>
                </value>
                <value>
                    <fullName>Orca</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pelican</fullName>
                </value>
                <value>
                    <fullName>RTIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Mapped to Contact to determine if Contact was created from a Lead.</description>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Dealer</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Dealer</fullName>
                </value>
                <value>
                    <fullName>Customer Logo Direct</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Fundraiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <description>Cust Industry Field to carry over to Accounts Object</description>
        <inlineHelpText>CLOTH - Clothing/Apparel
FARM - Farm &amp; Ranch
GOVT - Government
HARD - Hardware
INDUS - Industrial
LUMBER - Lumber
MARINE - Marine/Boating
MED - Medical
OTHER
PROMO - Promotional
SPORT - Sporting Goods
TRUCK - Automotive Truck Aftermarket</inlineHelpText>
        <label>Customer Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOTH</fullName>
                </value>
                <value>
                    <fullName>FARM</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HARD</fullName>
                </value>
                <value>
                    <fullName>INDUS</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>MARINE</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
                <value>
                    <fullName>SPORT</fullName>
                </value>
                <value>
                    <fullName>TRUCK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI_Store_Number__c</fullName>
        <description>Store Number aka EDI Store/Billing Number</description>
        <inlineHelpText>This is the store number or billing number used by billing groups. (i.e. Ace Hardware, TrueValue &amp; Do It Best)</inlineHelpText>
        <label>EDI Store Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecommerce_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ecommerce Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Annual_Revenue__c</fullName>
        <label>Estimated Total Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gear_Accessories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gear &amp; Accessories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hopper_Logo__c</fullName>
        <label>Hopper Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopper__c</fullName>
        <label>Hopper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>HOME/HARDWARE</fullName>
                </value>
                <value>
                    <fullName>FARM/FLEET</fullName>
                </value>
                <value>
                    <fullName>OTHER RETAIL</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
                <value>
                    <fullName>HUNT/FISH</fullName>
                </value>
                <value>
                    <fullName>INDOOR/OUTDOOR LIVING</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR RECREATION</fullName>
                </value>
                <value>
                    <fullName>ACTION SPORTS</fullName>
                </value>
                <value>
                    <fullName>MOTOR VEHICLE</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OEM</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <label>Industry Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFTERMARKET ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>APPAREL/SHOES</fullName>
                </value>
                <value>
                    <fullName>AUTO/MOTO/MARINE/RV DEALER</fullName>
                </value>
                <value>
                    <fullName>AUTO/MOTO/MARINE/RV MFG</fullName>
                </value>
                <value>
                    <fullName>BARBEQUE</fullName>
                </value>
                <value>
                    <fullName>COLLEGIATE</fullName>
                </value>
                <value>
                    <fullName>FLY FISHING SPECIALTY</fullName>
                </value>
                <value>
                    <fullName>FOOD/BEVERAGE</fullName>
                </value>
                <value>
                    <fullName>GENERAL MERCHANDISE</fullName>
                </value>
                <value>
                    <fullName>GIFTING</fullName>
                </value>
                <value>
                    <fullName>GOLF</fullName>
                </value>
                <value>
                    <fullName>GROCERY/LIQUOR</fullName>
                </value>
                <value>
                    <fullName>GUN/ARCHERY/HUNTING SUPPLY</fullName>
                </value>
                <value>
                    <fullName>HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HOME FURNITURE</fullName>
                </value>
                <value>
                    <fullName>HUNT/FISH</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>LAND/WATER POWERSPORTS</fullName>
                </value>
                <value>
                    <fullName>LIVESTOCK/PET SUPPLY</fullName>
                </value>
                <value>
                    <fullName>MARINE</fullName>
                </value>
                <value>
                    <fullName>MILITARY/POLICE</fullName>
                </value>
                <value>
                    <fullName>ORIGINAL EQUIPMENT MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>BACKYARD/BBQ/POOL</fullName>
                </value>
                <value>
                    <fullName>PROMO GOODS</fullName>
                </value>
                <value>
                    <fullName>RECREATIONAL</fullName>
                </value>
                <value>
                    <fullName>ROD/BAIT/TACKLE</fullName>
                </value>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>SURF/SKATE/SKI</fullName>
                </value>
                <value>
                    <fullName>TRACTOR/TRAILER/CONSTRUCTION EQUIPMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Online__c</fullName>
        <label>Interest to Sell Online? List Website</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Preference__c</fullName>
        <label>Invoice Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Mail &amp; Email</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Do Not Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Assigned_by_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Assigned by State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned_by_Zip_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Assigned by Zip Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assignment Rule</label>
        <referenceTo>Lead_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Industry_Category__c</fullName>
        <label>Lead Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Farm/Fleet</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Home/Hardware</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other Retail</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Action Sports</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadconversionRT__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadconversionRT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Only_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Only Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Converted_Reason__c</fullName>
        <label>Not Converted Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Dealers_Near__c</fullName>
        <label>Number of Dealers Near</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftops__c</fullName>
        <label>Number of Rooftops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Annual_Sales__c</fullName>
        <label>Potential Annual YETI Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Brands_Carried__c</fullName>
        <label>Premium Brands Carried</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arc&apos;Teryx</fullName>
                </value>
                <value>
                    <fullName>Benelli</fullName>
                </value>
                <value>
                    <fullName>Beretta</fullName>
                </value>
                <value>
                    <fullName>Big Green Egg</fullName>
                </value>
                <value>
                    <fullName>Bote Boards</fullName>
                </value>
                <value>
                    <fullName>Burton</fullName>
                </value>
                <value>
                    <fullName>Costa Del Mar</fullName>
                </value>
                <value>
                    <fullName>Filson</fullName>
                </value>
                <value>
                    <fullName>G.Loomis</fullName>
                </value>
                <value>
                    <fullName>Gerber</fullName>
                </value>
                <value>
                    <fullName>GoPro</fullName>
                </value>
                <value>
                    <fullName>Mathew&apos;s Bows</fullName>
                </value>
                <value>
                    <fullName>Maui Jim</fullName>
                </value>
                <value>
                    <fullName>Oakley</fullName>
                </value>
                <value>
                    <fullName>Ray Ban</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Shimano</fullName>
                </value>
                <value>
                    <fullName>Simms</fullName>
                </value>
                <value>
                    <fullName>Sitka</fullName>
                </value>
                <value>
                    <fullName>Smith &amp; Wesson</fullName>
                </value>
                <value>
                    <fullName>Southern Tide</fullName>
                </value>
                <value>
                    <fullName>Specialized</fullName>
                </value>
                <value>
                    <fullName>Stihl</fullName>
                </value>
                <value>
                    <fullName>Swarovski</fullName>
                </value>
                <value>
                    <fullName>Thule</fullName>
                </value>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Billing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leave this checked so it will sync with Epcior! Thanks -RH</description>
        <inlineHelpText>Leave this checked so it will sync with Epcior! Thanks -RH</inlineHelpText>
        <label>Primary Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Purchasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rambler</fullName>
                </value>
                <value>
                    <fullName>Hopper</fullName>
                </value>
                <value>
                    <fullName>Tundra</fullName>
                </value>
                <value>
                    <fullName>Gear &amp; Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rambler_Logo__c</fullName>
        <label>Rambler Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rambler__c</fullName>
        <label>Rambler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tundra_Logo__c</fullName>
        <label>Tundra Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tundra__c</fullName>
        <label>Tundra</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Contacts that were presented to the user at the time they created it.</description>
        <label>Contact Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
        <label>Lead Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upload_Exterior_and_Storefront__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This includes: parking lot, counters, merchandising of premium brands (MINIMUM 2)</inlineHelpText>
        <label>Upload Exterior and Storefront</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_List_of_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload List of Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Was Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically send welcome kit to new dealer upon lead conversion.</description>
        <inlineHelpText>Automatically send welcome kit to new dealer upon lead conversion.</inlineHelpText>
        <label>Welcome Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Enhance_Brand__c</fullName>
        <label>Will They Enhance our Brand, How?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_YETI_Dealer__c</fullName>
        <label>Why Should They Be a YETI Dealer?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>Customer_Industry__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Converted - Other,Not Converted - Disqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>BizDev_Escalation_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev Escalation Queue</label>
        <queue>BizDev_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BizDev_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BizDev</label>
        <queue>BizDev</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEG_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CEG</label>
        <queue>CEG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Entry_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Data-Entry Queue</label>
        <queue>Data_Entry_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>